ProjetoCompilador/gramatica.output
Terminals unused in grammar

   T_PLUS_EQ
   T_MINUS_EQ
   T_TIMES_EQ
   T_DIVIDE_EQ
   T_DOUBLE_PERIOD
   T_REPEAT
   T_UNTIL
   T_PARAMETER
   T_VOID
   T_INVALID


Grammar

    0 $accept: input T_EOF

    1 input: T_PROGRAM insert_print_procedure T_ID T_SEMICOLON block_body T_PERIOD

    2 insert_print_procedure: /* empty */

    3 block_body: opt_constant_definition_part opt_variable_definition_part star_procedure_definition compound_statement

    4 opt_constant_definition_part: /* empty */
    5                             | constant_definition_part

    6 opt_variable_definition_part: /* empty */
    7                             | variable_definition_part

    8 star_procedure_definition: /* empty */
    9                          | set_procedure_definition procedure_definition star_procedure_definition

   10 set_procedure_definition: /* empty */

   11 constant_definition_part: T_CONST plus_constant_definition

   12 plus_constant_definition: constant_definition
   13                         | constant_definition plus_constant_definition

   14 constant_definition: T_ID T_EQ T_INT_CONST T_SEMICOLON
   15                    | T_ID T_EQ T_REAL_CONST T_SEMICOLON
   16                    | T_ID T_EQ T_BOOLEAN_CONST T_SEMICOLON

   17 variable_definition_part: T_VAR plus_variable_definition

   18 plus_variable_definition: variable_definition
   19                         | variable_definition plus_variable_definition

   20 variable_definition: variable_group T_SEMICOLON

   21 variable_group: T_ID star_comma_id T_COLON type

   22 star_comma_id: /* empty */
   23              | T_COMMA T_ID star_comma_id

   24 type: T_INTEGER
   25     | T_REAL
   26     | T_BOOLEAN

   27 procedure_definition: procedure_block block_body T_SEMICOLON

   28 procedure_block: init_procedure opt_brc_formal_parameter_list_brc T_SEMICOLON

   29 init_procedure: T_PROCEDURE T_ID

   30 opt_brc_formal_parameter_list_brc: /* empty */
   31                                  | T_LBRACKET formal_parameter_list T_RBRACKET

   32 formal_parameter_list: parameter_definition star_smc_parameter_definition

   33 star_smc_parameter_definition: /* empty */
   34                              | T_SEMICOLON parameter_definition star_smc_parameter_definition

   35 parameter_definition: variable_group_par

   36 variable_group_par: T_ID star_comma_id_par T_COLON type

   37 star_comma_id_par: /* empty */
   38                  | T_COMMA T_ID star_comma_id_par

   39 statement: /* empty */
   40          | procedure_statement
   41          | if_statement
   42          | while_statement
   43          | compound_statement
   44          | assignment_statement

   45 assignment_statement: variable_access T_ASSIGN expression

   46 procedure_statement: T_ID opt_brc_actual_parameter_list_brc

   47 opt_brc_actual_parameter_list_brc: /* empty */
   48                                  | T_LBRACKET set_procedure_par actual_parameter_list T_RBRACKET

   49 set_procedure_par: /* empty */

   50 actual_parameter_list: actual_parameter star_comma_actual_parameter

   51 star_comma_actual_parameter: /* empty */
   52                            | T_COMMA actual_parameter star_comma_actual_parameter

   53 actual_parameter: expression

   54 if_statement: T_IF expression T_THEN statement
   55             | T_IF expression T_THEN statement T_ELSE statement

   56 while_statement: T_WHILE expression T_DO statement

   57 compound_statement: T_BEGIN statement star_comma_statement T_END

   58 star_comma_statement: /* empty */
   59                     | T_SEMICOLON statement star_comma_statement

   60 expression: simple_expression opt_relational_operator_simple_expression

   61 opt_relational_operator_simple_expression: /* empty */
   62                                          | relational_operator simple_expression

   63 relational_operator: T_LT
   64                    | T_EQ
   65                    | T_GT
   66                    | T_LEQ
   67                    | T_DIF
   68                    | T_GEQ

   69 simple_expression: sign_operator term star_adding_operator_term
   70                  | term star_adding_operator_term

   71 sign_operator: T_PLUS
   72              | T_MINUS

   73 star_adding_operator_term: /* empty */
   74                          | adding_operator term star_adding_operator_term

   75 adding_operator: T_PLUS
   76                | T_MINUS
   77                | T_OR

   78 term: factor star_multiplying_operator_factor

   79 star_multiplying_operator_factor: /* empty */
   80                                 | multiplying_operator factor star_multiplying_operator_factor

   81 multiplying_operator: T_TIMES
   82                     | T_DIV
   83                     | T_MOD
   84                     | T_AND
   85                     | T_DIVIDE

   86 factor: constant
   87       | T_LBRACKET expression T_RBRACKET
   88       | T_NOT factor

   89 variable_access: T_ID

   90 constant: T_INT_CONST
   91         | T_REAL_CONST
   92         | T_BOOLEAN_CONST
   93         | variable_access


Terminals, with rules where they appear

T_EOF (0) 0
T_ID (1) 1 14 15 16 21 23 29 36 38 46 89
T_INT_CONST (2) 14 90
T_REAL_CONST (3) 15 91
T_BOOLEAN_CONST (4) 16 92
T_PROGRAM (5) 1
T_PROCEDURE (6) 29
T_BEGIN (7) 57
T_END (8) 57
T_IF (9) 54 55
T_THEN (10) 54 55
T_ELSE (11) 55
T_WHILE (12) 56
T_DO (13) 56
T_ASSIGN (14) 45
T_PLUS (15) 71 75
T_MINUS (16) 72 76
T_TIMES (17) 81
T_DIVIDE (18) 85
T_DIV (19) 82
T_MOD (20) 83
T_PLUS_EQ (21)
T_MINUS_EQ (22)
T_TIMES_EQ (23)
T_AND (24) 84
T_OR (25) 77
T_NOT (26) 88
T_DIVIDE_EQ (27)
T_VAR (28) 17
T_INTEGER (29) 24
T_REAL (30) 25
T_BOOLEAN (31) 26
T_COLON (32) 21 36
T_SEMICOLON (33) 1 14 15 16 20 27 28 34 59
T_COMMA (34) 23 38 52
T_PERIOD (35) 1
T_DOUBLE_PERIOD (36)
T_LBRACKET (37) 31 48 87
T_RBRACKET (38) 31 48 87
T_CONST (39) 11
T_REPEAT (40)
T_UNTIL (41)
T_EQ (42) 14 15 16 64
T_DIF (43) 67
T_LT (44) 63
T_LEQ (45) 66
T_GT (46) 65
T_GEQ (47) 68
T_PARAMETER (48)
T_VOID (49)
T_INVALID (255)
error (256)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
input (54)
    on left: 1, on right: 0
insert_print_procedure (55)
    on left: 2, on right: 1
block_body (56)
    on left: 3, on right: 1 27
opt_constant_definition_part (57)
    on left: 4 5, on right: 3
opt_variable_definition_part (58)
    on left: 6 7, on right: 3
star_procedure_definition (59)
    on left: 8 9, on right: 3 9
set_procedure_definition (60)
    on left: 10, on right: 9
constant_definition_part (61)
    on left: 11, on right: 5
plus_constant_definition (62)
    on left: 12 13, on right: 11 13
constant_definition (63)
    on left: 14 15 16, on right: 12 13
variable_definition_part (64)
    on left: 17, on right: 7
plus_variable_definition (65)
    on left: 18 19, on right: 17 19
variable_definition (66)
    on left: 20, on right: 18 19
variable_group (67)
    on left: 21, on right: 20
star_comma_id (68)
    on left: 22 23, on right: 21 23
type (69)
    on left: 24 25 26, on right: 21 36
procedure_definition (70)
    on left: 27, on right: 9
procedure_block (71)
    on left: 28, on right: 27
init_procedure (72)
    on left: 29, on right: 28
opt_brc_formal_parameter_list_brc (73)
    on left: 30 31, on right: 28
formal_parameter_list (74)
    on left: 32, on right: 31
star_smc_parameter_definition (75)
    on left: 33 34, on right: 32 34
parameter_definition (76)
    on left: 35, on right: 32 34
variable_group_par (77)
    on left: 36, on right: 35
star_comma_id_par (78)
    on left: 37 38, on right: 36 38
statement (79)
    on left: 39 40 41 42 43 44, on right: 54 55 56 57 59
assignment_statement (80)
    on left: 45, on right: 44
procedure_statement (81)
    on left: 46, on right: 40
opt_brc_actual_parameter_list_brc (82)
    on left: 47 48, on right: 46
set_procedure_par (83)
    on left: 49, on right: 48
actual_parameter_list (84)
    on left: 50, on right: 48
star_comma_actual_parameter (85)
    on left: 51 52, on right: 50 52
actual_parameter (86)
    on left: 53, on right: 50 52
if_statement (87)
    on left: 54 55, on right: 41
while_statement (88)
    on left: 56, on right: 42
compound_statement (89)
    on left: 57, on right: 3 43
star_comma_statement (90)
    on left: 58 59, on right: 57 59
expression (91)
    on left: 60, on right: 45 53 54 55 56 87
opt_relational_operator_simple_expression (92)
    on left: 61 62, on right: 60
relational_operator (93)
    on left: 63 64 65 66 67 68, on right: 62
simple_expression (94)
    on left: 69 70, on right: 60 62
sign_operator (95)
    on left: 71 72, on right: 69
star_adding_operator_term (96)
    on left: 73 74, on right: 69 70 74
adding_operator (97)
    on left: 75 76 77, on right: 74
term (98)
    on left: 78, on right: 69 70 74
star_multiplying_operator_factor (99)
    on left: 79 80, on right: 78 80
multiplying_operator (100)
    on left: 81 82 83 84 85, on right: 80
factor (101)
    on left: 86 87 88, on right: 78 80 88
variable_access (102)
    on left: 89, on right: 45 93
constant (103)
    on left: 90 91 92 93, on right: 86


state 0

    0 $accept: . input T_EOF

    T_PROGRAM  shift, and go to state 1

    input  go to state 2


state 1

    1 input: T_PROGRAM . insert_print_procedure T_ID T_SEMICOLON block_body T_PERIOD

    $default  reduce using rule 2 (insert_print_procedure)

    insert_print_procedure  go to state 3


state 2

    0 $accept: input . T_EOF

    T_EOF  shift, and go to state 4


state 3

    1 input: T_PROGRAM insert_print_procedure . T_ID T_SEMICOLON block_body T_PERIOD

    T_ID  shift, and go to state 5


state 4

    0 $accept: input T_EOF .

    $default  accept


state 5

    1 input: T_PROGRAM insert_print_procedure T_ID . T_SEMICOLON block_body T_PERIOD

    T_SEMICOLON  shift, and go to state 6


state 6

    1 input: T_PROGRAM insert_print_procedure T_ID T_SEMICOLON . block_body T_PERIOD

    T_CONST  shift, and go to state 7

    $default  reduce using rule 4 (opt_constant_definition_part)

    block_body                    go to state 8
    opt_constant_definition_part  go to state 9
    constant_definition_part      go to state 10


state 7

   11 constant_definition_part: T_CONST . plus_constant_definition

    T_ID  shift, and go to state 11

    plus_constant_definition  go to state 12
    constant_definition       go to state 13


state 8

    1 input: T_PROGRAM insert_print_procedure T_ID T_SEMICOLON block_body . T_PERIOD

    T_PERIOD  shift, and go to state 14


state 9

    3 block_body: opt_constant_definition_part . opt_variable_definition_part star_procedure_definition compound_statement

    T_VAR  shift, and go to state 15

    $default  reduce using rule 6 (opt_variable_definition_part)

    opt_variable_definition_part  go to state 16
    variable_definition_part      go to state 17


state 10

    5 opt_constant_definition_part: constant_definition_part .

    $default  reduce using rule 5 (opt_constant_definition_part)


state 11

   14 constant_definition: T_ID . T_EQ T_INT_CONST T_SEMICOLON
   15                    | T_ID . T_EQ T_REAL_CONST T_SEMICOLON
   16                    | T_ID . T_EQ T_BOOLEAN_CONST T_SEMICOLON

    T_EQ  shift, and go to state 18


state 12

   11 constant_definition_part: T_CONST plus_constant_definition .

    $default  reduce using rule 11 (constant_definition_part)


state 13

   12 plus_constant_definition: constant_definition .
   13                         | constant_definition . plus_constant_definition

    T_ID  shift, and go to state 11

    $default  reduce using rule 12 (plus_constant_definition)

    plus_constant_definition  go to state 19
    constant_definition       go to state 13


state 14

    1 input: T_PROGRAM insert_print_procedure T_ID T_SEMICOLON block_body T_PERIOD .

    $default  reduce using rule 1 (input)


state 15

   17 variable_definition_part: T_VAR . plus_variable_definition

    T_ID  shift, and go to state 20

    plus_variable_definition  go to state 21
    variable_definition       go to state 22
    variable_group            go to state 23


state 16

    3 block_body: opt_constant_definition_part opt_variable_definition_part . star_procedure_definition compound_statement

    T_PROCEDURE  reduce using rule 10 (set_procedure_definition)
    $default     reduce using rule 8 (star_procedure_definition)

    star_procedure_definition  go to state 24
    set_procedure_definition   go to state 25


state 17

    7 opt_variable_definition_part: variable_definition_part .

    $default  reduce using rule 7 (opt_variable_definition_part)


state 18

   14 constant_definition: T_ID T_EQ . T_INT_CONST T_SEMICOLON
   15                    | T_ID T_EQ . T_REAL_CONST T_SEMICOLON
   16                    | T_ID T_EQ . T_BOOLEAN_CONST T_SEMICOLON

    T_INT_CONST      shift, and go to state 26
    T_REAL_CONST     shift, and go to state 27
    T_BOOLEAN_CONST  shift, and go to state 28


state 19

   13 plus_constant_definition: constant_definition plus_constant_definition .

    $default  reduce using rule 13 (plus_constant_definition)


state 20

   21 variable_group: T_ID . star_comma_id T_COLON type

    T_COMMA  shift, and go to state 29

    $default  reduce using rule 22 (star_comma_id)

    star_comma_id  go to state 30


state 21

   17 variable_definition_part: T_VAR plus_variable_definition .

    $default  reduce using rule 17 (variable_definition_part)


state 22

   18 plus_variable_definition: variable_definition .
   19                         | variable_definition . plus_variable_definition

    T_ID  shift, and go to state 20

    $default  reduce using rule 18 (plus_variable_definition)

    plus_variable_definition  go to state 31
    variable_definition       go to state 22
    variable_group            go to state 23


state 23

   20 variable_definition: variable_group . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 32


state 24

    3 block_body: opt_constant_definition_part opt_variable_definition_part star_procedure_definition . compound_statement

    T_BEGIN  shift, and go to state 33

    compound_statement  go to state 34


state 25

    9 star_procedure_definition: set_procedure_definition . procedure_definition star_procedure_definition

    T_PROCEDURE  shift, and go to state 35

    procedure_definition  go to state 36
    procedure_block       go to state 37
    init_procedure        go to state 38


state 26

   14 constant_definition: T_ID T_EQ T_INT_CONST . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 39


state 27

   15 constant_definition: T_ID T_EQ T_REAL_CONST . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 40


state 28

   16 constant_definition: T_ID T_EQ T_BOOLEAN_CONST . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 41


state 29

   23 star_comma_id: T_COMMA . T_ID star_comma_id

    T_ID  shift, and go to state 42


state 30

   21 variable_group: T_ID star_comma_id . T_COLON type

    T_COLON  shift, and go to state 43


state 31

   19 plus_variable_definition: variable_definition plus_variable_definition .

    $default  reduce using rule 19 (plus_variable_definition)


state 32

   20 variable_definition: variable_group T_SEMICOLON .

    $default  reduce using rule 20 (variable_definition)


state 33

   57 compound_statement: T_BEGIN . statement star_comma_statement T_END

    T_ID     shift, and go to state 44
    T_BEGIN  shift, and go to state 33
    T_IF     shift, and go to state 45
    T_WHILE  shift, and go to state 46

    $default  reduce using rule 39 (statement)

    statement             go to state 47
    assignment_statement  go to state 48
    procedure_statement   go to state 49
    if_statement          go to state 50
    while_statement       go to state 51
    compound_statement    go to state 52
    variable_access       go to state 53


state 34

    3 block_body: opt_constant_definition_part opt_variable_definition_part star_procedure_definition compound_statement .

    $default  reduce using rule 3 (block_body)


state 35

   29 init_procedure: T_PROCEDURE . T_ID

    T_ID  shift, and go to state 54


state 36

    9 star_procedure_definition: set_procedure_definition procedure_definition . star_procedure_definition

    T_PROCEDURE  reduce using rule 10 (set_procedure_definition)
    $default     reduce using rule 8 (star_procedure_definition)

    star_procedure_definition  go to state 55
    set_procedure_definition   go to state 25


state 37

   27 procedure_definition: procedure_block . block_body T_SEMICOLON

    T_CONST  shift, and go to state 7

    $default  reduce using rule 4 (opt_constant_definition_part)

    block_body                    go to state 56
    opt_constant_definition_part  go to state 9
    constant_definition_part      go to state 10


state 38

   28 procedure_block: init_procedure . opt_brc_formal_parameter_list_brc T_SEMICOLON

    T_LBRACKET  shift, and go to state 57

    $default  reduce using rule 30 (opt_brc_formal_parameter_list_brc)

    opt_brc_formal_parameter_list_brc  go to state 58


state 39

   14 constant_definition: T_ID T_EQ T_INT_CONST T_SEMICOLON .

    $default  reduce using rule 14 (constant_definition)


state 40

   15 constant_definition: T_ID T_EQ T_REAL_CONST T_SEMICOLON .

    $default  reduce using rule 15 (constant_definition)


state 41

   16 constant_definition: T_ID T_EQ T_BOOLEAN_CONST T_SEMICOLON .

    $default  reduce using rule 16 (constant_definition)


state 42

   23 star_comma_id: T_COMMA T_ID . star_comma_id

    T_COMMA  shift, and go to state 29

    $default  reduce using rule 22 (star_comma_id)

    star_comma_id  go to state 59


state 43

   21 variable_group: T_ID star_comma_id T_COLON . type

    T_INTEGER  shift, and go to state 60
    T_REAL     shift, and go to state 61
    T_BOOLEAN  shift, and go to state 62

    type  go to state 63


state 44

   46 procedure_statement: T_ID . opt_brc_actual_parameter_list_brc
   89 variable_access: T_ID .

    T_LBRACKET  shift, and go to state 64

    T_ASSIGN  reduce using rule 89 (variable_access)
    $default  reduce using rule 47 (opt_brc_actual_parameter_list_brc)

    opt_brc_actual_parameter_list_brc  go to state 65


state 45

   54 if_statement: T_IF . expression T_THEN statement
   55             | T_IF . expression T_THEN statement T_ELSE statement

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_PLUS           shift, and go to state 70
    T_MINUS          shift, and go to state 71
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    expression         go to state 74
    simple_expression  go to state 75
    sign_operator      go to state 76
    term               go to state 77
    factor             go to state 78
    variable_access    go to state 79
    constant           go to state 80


state 46

   56 while_statement: T_WHILE . expression T_DO statement

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_PLUS           shift, and go to state 70
    T_MINUS          shift, and go to state 71
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    expression         go to state 81
    simple_expression  go to state 75
    sign_operator      go to state 76
    term               go to state 77
    factor             go to state 78
    variable_access    go to state 79
    constant           go to state 80


state 47

   57 compound_statement: T_BEGIN statement . star_comma_statement T_END

    T_SEMICOLON  shift, and go to state 82

    $default  reduce using rule 58 (star_comma_statement)

    star_comma_statement  go to state 83


state 48

   44 statement: assignment_statement .

    $default  reduce using rule 44 (statement)


state 49

   40 statement: procedure_statement .

    $default  reduce using rule 40 (statement)


state 50

   41 statement: if_statement .

    $default  reduce using rule 41 (statement)


state 51

   42 statement: while_statement .

    $default  reduce using rule 42 (statement)


state 52

   43 statement: compound_statement .

    $default  reduce using rule 43 (statement)


state 53

   45 assignment_statement: variable_access . T_ASSIGN expression

    T_ASSIGN  shift, and go to state 84


state 54

   29 init_procedure: T_PROCEDURE T_ID .

    $default  reduce using rule 29 (init_procedure)


state 55

    9 star_procedure_definition: set_procedure_definition procedure_definition star_procedure_definition .

    $default  reduce using rule 9 (star_procedure_definition)


state 56

   27 procedure_definition: procedure_block block_body . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 85


state 57

   31 opt_brc_formal_parameter_list_brc: T_LBRACKET . formal_parameter_list T_RBRACKET

    T_ID  shift, and go to state 86

    formal_parameter_list  go to state 87
    parameter_definition   go to state 88
    variable_group_par     go to state 89


state 58

   28 procedure_block: init_procedure opt_brc_formal_parameter_list_brc . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 90


state 59

   23 star_comma_id: T_COMMA T_ID star_comma_id .

    $default  reduce using rule 23 (star_comma_id)


state 60

   24 type: T_INTEGER .

    $default  reduce using rule 24 (type)


state 61

   25 type: T_REAL .

    $default  reduce using rule 25 (type)


state 62

   26 type: T_BOOLEAN .

    $default  reduce using rule 26 (type)


state 63

   21 variable_group: T_ID star_comma_id T_COLON type .

    $default  reduce using rule 21 (variable_group)


state 64

   48 opt_brc_actual_parameter_list_brc: T_LBRACKET . set_procedure_par actual_parameter_list T_RBRACKET

    $default  reduce using rule 49 (set_procedure_par)

    set_procedure_par  go to state 91


state 65

   46 procedure_statement: T_ID opt_brc_actual_parameter_list_brc .

    $default  reduce using rule 46 (procedure_statement)


state 66

   89 variable_access: T_ID .

    $default  reduce using rule 89 (variable_access)


state 67

   90 constant: T_INT_CONST .

    $default  reduce using rule 90 (constant)


state 68

   91 constant: T_REAL_CONST .

    $default  reduce using rule 91 (constant)


state 69

   92 constant: T_BOOLEAN_CONST .

    $default  reduce using rule 92 (constant)


state 70

   71 sign_operator: T_PLUS .

    $default  reduce using rule 71 (sign_operator)


state 71

   72 sign_operator: T_MINUS .

    $default  reduce using rule 72 (sign_operator)


state 72

   88 factor: T_NOT . factor

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    factor           go to state 92
    variable_access  go to state 79
    constant         go to state 80


state 73

   87 factor: T_LBRACKET . expression T_RBRACKET

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_PLUS           shift, and go to state 70
    T_MINUS          shift, and go to state 71
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    expression         go to state 93
    simple_expression  go to state 75
    sign_operator      go to state 76
    term               go to state 77
    factor             go to state 78
    variable_access    go to state 79
    constant           go to state 80


state 74

   54 if_statement: T_IF expression . T_THEN statement
   55             | T_IF expression . T_THEN statement T_ELSE statement

    T_THEN  shift, and go to state 94


state 75

   60 expression: simple_expression . opt_relational_operator_simple_expression

    T_EQ   shift, and go to state 95
    T_DIF  shift, and go to state 96
    T_LT   shift, and go to state 97
    T_LEQ  shift, and go to state 98
    T_GT   shift, and go to state 99
    T_GEQ  shift, and go to state 100

    $default  reduce using rule 61 (opt_relational_operator_simple_expression)

    opt_relational_operator_simple_expression  go to state 101
    relational_operator                        go to state 102


state 76

   69 simple_expression: sign_operator . term star_adding_operator_term

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    term             go to state 103
    factor           go to state 78
    variable_access  go to state 79
    constant         go to state 80


state 77

   70 simple_expression: term . star_adding_operator_term

    T_PLUS   shift, and go to state 104
    T_MINUS  shift, and go to state 105
    T_OR     shift, and go to state 106

    $default  reduce using rule 73 (star_adding_operator_term)

    star_adding_operator_term  go to state 107
    adding_operator            go to state 108


state 78

   78 term: factor . star_multiplying_operator_factor

    T_TIMES   shift, and go to state 109
    T_DIVIDE  shift, and go to state 110
    T_DIV     shift, and go to state 111
    T_MOD     shift, and go to state 112
    T_AND     shift, and go to state 113

    $default  reduce using rule 79 (star_multiplying_operator_factor)

    star_multiplying_operator_factor  go to state 114
    multiplying_operator              go to state 115


state 79

   93 constant: variable_access .

    $default  reduce using rule 93 (constant)


state 80

   86 factor: constant .

    $default  reduce using rule 86 (factor)


state 81

   56 while_statement: T_WHILE expression . T_DO statement

    T_DO  shift, and go to state 116


state 82

   59 star_comma_statement: T_SEMICOLON . statement star_comma_statement

    T_ID     shift, and go to state 44
    T_BEGIN  shift, and go to state 33
    T_IF     shift, and go to state 45
    T_WHILE  shift, and go to state 46

    $default  reduce using rule 39 (statement)

    statement             go to state 117
    assignment_statement  go to state 48
    procedure_statement   go to state 49
    if_statement          go to state 50
    while_statement       go to state 51
    compound_statement    go to state 52
    variable_access       go to state 53


state 83

   57 compound_statement: T_BEGIN statement star_comma_statement . T_END

    T_END  shift, and go to state 118


state 84

   45 assignment_statement: variable_access T_ASSIGN . expression

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_PLUS           shift, and go to state 70
    T_MINUS          shift, and go to state 71
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    expression         go to state 119
    simple_expression  go to state 75
    sign_operator      go to state 76
    term               go to state 77
    factor             go to state 78
    variable_access    go to state 79
    constant           go to state 80


state 85

   27 procedure_definition: procedure_block block_body T_SEMICOLON .

    $default  reduce using rule 27 (procedure_definition)


state 86

   36 variable_group_par: T_ID . star_comma_id_par T_COLON type

    T_COMMA  shift, and go to state 120

    $default  reduce using rule 37 (star_comma_id_par)

    star_comma_id_par  go to state 121


state 87

   31 opt_brc_formal_parameter_list_brc: T_LBRACKET formal_parameter_list . T_RBRACKET

    T_RBRACKET  shift, and go to state 122


state 88

   32 formal_parameter_list: parameter_definition . star_smc_parameter_definition

    T_SEMICOLON  shift, and go to state 123

    $default  reduce using rule 33 (star_smc_parameter_definition)

    star_smc_parameter_definition  go to state 124


state 89

   35 parameter_definition: variable_group_par .

    $default  reduce using rule 35 (parameter_definition)


state 90

   28 procedure_block: init_procedure opt_brc_formal_parameter_list_brc T_SEMICOLON .

    $default  reduce using rule 28 (procedure_block)


state 91

   48 opt_brc_actual_parameter_list_brc: T_LBRACKET set_procedure_par . actual_parameter_list T_RBRACKET

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_PLUS           shift, and go to state 70
    T_MINUS          shift, and go to state 71
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    actual_parameter_list  go to state 125
    actual_parameter       go to state 126
    expression             go to state 127
    simple_expression      go to state 75
    sign_operator          go to state 76
    term                   go to state 77
    factor                 go to state 78
    variable_access        go to state 79
    constant               go to state 80


state 92

   88 factor: T_NOT factor .

    $default  reduce using rule 88 (factor)


state 93

   87 factor: T_LBRACKET expression . T_RBRACKET

    T_RBRACKET  shift, and go to state 128


state 94

   54 if_statement: T_IF expression T_THEN . statement
   55             | T_IF expression T_THEN . statement T_ELSE statement

    T_ID     shift, and go to state 44
    T_BEGIN  shift, and go to state 33
    T_IF     shift, and go to state 45
    T_WHILE  shift, and go to state 46

    $default  reduce using rule 39 (statement)

    statement             go to state 129
    assignment_statement  go to state 48
    procedure_statement   go to state 49
    if_statement          go to state 50
    while_statement       go to state 51
    compound_statement    go to state 52
    variable_access       go to state 53


state 95

   64 relational_operator: T_EQ .

    $default  reduce using rule 64 (relational_operator)


state 96

   67 relational_operator: T_DIF .

    $default  reduce using rule 67 (relational_operator)


state 97

   63 relational_operator: T_LT .

    $default  reduce using rule 63 (relational_operator)


state 98

   66 relational_operator: T_LEQ .

    $default  reduce using rule 66 (relational_operator)


state 99

   65 relational_operator: T_GT .

    $default  reduce using rule 65 (relational_operator)


state 100

   68 relational_operator: T_GEQ .

    $default  reduce using rule 68 (relational_operator)


state 101

   60 expression: simple_expression opt_relational_operator_simple_expression .

    $default  reduce using rule 60 (expression)


state 102

   62 opt_relational_operator_simple_expression: relational_operator . simple_expression

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_PLUS           shift, and go to state 70
    T_MINUS          shift, and go to state 71
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    simple_expression  go to state 130
    sign_operator      go to state 76
    term               go to state 77
    factor             go to state 78
    variable_access    go to state 79
    constant           go to state 80


state 103

   69 simple_expression: sign_operator term . star_adding_operator_term

    T_PLUS   shift, and go to state 104
    T_MINUS  shift, and go to state 105
    T_OR     shift, and go to state 106

    $default  reduce using rule 73 (star_adding_operator_term)

    star_adding_operator_term  go to state 131
    adding_operator            go to state 108


state 104

   75 adding_operator: T_PLUS .

    $default  reduce using rule 75 (adding_operator)


state 105

   76 adding_operator: T_MINUS .

    $default  reduce using rule 76 (adding_operator)


state 106

   77 adding_operator: T_OR .

    $default  reduce using rule 77 (adding_operator)


state 107

   70 simple_expression: term star_adding_operator_term .

    $default  reduce using rule 70 (simple_expression)


state 108

   74 star_adding_operator_term: adding_operator . term star_adding_operator_term

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    term             go to state 132
    factor           go to state 78
    variable_access  go to state 79
    constant         go to state 80


state 109

   81 multiplying_operator: T_TIMES .

    $default  reduce using rule 81 (multiplying_operator)


state 110

   85 multiplying_operator: T_DIVIDE .

    $default  reduce using rule 85 (multiplying_operator)


state 111

   82 multiplying_operator: T_DIV .

    $default  reduce using rule 82 (multiplying_operator)


state 112

   83 multiplying_operator: T_MOD .

    $default  reduce using rule 83 (multiplying_operator)


state 113

   84 multiplying_operator: T_AND .

    $default  reduce using rule 84 (multiplying_operator)


state 114

   78 term: factor star_multiplying_operator_factor .

    $default  reduce using rule 78 (term)


state 115

   80 star_multiplying_operator_factor: multiplying_operator . factor star_multiplying_operator_factor

    T_ID             shift, and go to state 66
    T_INT_CONST      shift, and go to state 67
    T_REAL_CONST     shift, and go to state 68
    T_BOOLEAN_CONST  shift, and go to state 69
    T_NOT            shift, and go to state 72
    T_LBRACKET       shift, and go to state 73

    factor           go to state 133
    variable_access  go to state 79
    constant         go to state 80


state 116

   56 while_statement: T_WHILE expression T_DO . statement

    T_ID     shift, and go to state 44
    T_BEGIN  shift, and go to state 33
    T_IF     shift, and go to state 45
    T_WHILE  shift, and go to state 46

    $default  reduce using rule 39 (statement)

    statement             go to state 134
    assignment_statement  go to state 48
    procedure_statement   go to state 49
    if_statement          go to state 50
    while_statement       go to state 51
    compound_statement    go to state 52
    variable_access       go to state 53


state 117

   59 star_comma_statement: T_SEMICOLON statement . star_comma_statement

    T_SEMICOLON  shift, and go to state 82

    $default  reduce using rule 58 (star_comma_statement)

    star_comma_statement  go to state 135


state 118

   57 compound_statement: T_BEGIN statement star_comma_statement T_END .

    $default  reduce using rule 57 (compound_statement)


state 119

   45 assignment_statement: variable_access T_ASSIGN expression .

    $default  reduce using rule 45 (assignment_statement)


state 120

   38 star_comma_id_par: T_COMMA . T_ID star_comma_id_par

    T_ID  shift, and go to state 136


state 121

   36 variable_group_par: T_ID star_comma_id_par . T_COLON type

    T_COLON  shift, and go to state 137


state 122

   31 opt_brc_formal_parameter_list_brc: T_LBRACKET formal_parameter_list T_RBRACKET .

    $default  reduce using rule 31 (opt_brc_formal_parameter_list_brc)


state 123

   34 star_smc_parameter_definition: T_SEMICOLON . parameter_definition star_smc_parameter_definition

    T_ID  shift, and go to state 86

    parameter_definition  go to state 138
